Updated Project Structure, added custom eslintrc & prettierrc configs

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -1,7 +1,12 @@
 .app {
-  font-family: sans-serif;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  background: white;
+    font-family: sans-serif;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    background: white;
+}
+
+.Container-heading {
+    margin-top: 2%;
+    color: rgb(22, 93, 147);
 }
